@@ -249,6 +249,8 @@ were worked around in the wrapper code.
 
 Added wx.lib.delayedresult from Oliver Schoenborn.
 
+Added wx.lib.expando, a multi-line textctrl that exands as more lines
+are needed.
 
 
 
